Harvester API is working, Recon Query documents are working in the database and all endpoints appear to be working correctly via Postman tests.
